--- a/project.config.json
+++ b/project.config.json
@@ -45,8 +45,8 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.21.0",
-  "appid": "wx47586bbed56a5001",
-  "projectname": "%E5%B0%8F%E8%9C%9C%E8%9C%82%E7%82%B9%E9%A4%90",
+  "appid": "wxa3b2f1a78305c895",
+  "projectname": "%E4%BA%A8%E5%BE%B7%E5%88%A9GO",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {
